build: Configuracion inicial del fichero properties para trabajar con la bd y el API gateway + otras configuraciones de seguridad

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,53 @@
+# ====================
+# CONFIGURACIÓN DE LA APLICACIÓN
+# ====================
 spring.application.name=vetapp
+server.port=8081
+
+# ====================
+# CONFIGURACIÓN DE SEGURIDAD (OAUTH2 RESOURCE SERVER)
+# ====================
+# El backend valida tokens JWT de Keycloak (doble validación con API Gateway)
+# Esto permite usar @PreAuthorize y extraer roles/claims del token
+
+# URL del issuer de Keycloak para validar tokens
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:8080/realms/vetcare}
+
+# ====================
+# CONFIGURACIÓN DE BASE DE DATOS (POSTGRESQL)
+# ====================
+# URL de conexión - usa variable de entorno en producción
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/vetcare_dev}
+spring.datasource.username=${DB_USERNAME:vetcare_user}
+spring.datasource.password=${DB_PASSWORD:vetcare_pass}
+
+# Driver de PostgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ====================
+# CONFIGURACIÓN DE JPA/HIBERNATE
+# ====================
+# Dialecto de PostgreSQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Estrategia de generación de esquema
+# validate: Solo valida que el esquema coincida (PRODUCCIÓN)
+# update: Actualiza el esquema automáticamente (DESARROLLO - cuidado)
+spring.jpa.hibernate.ddl-auto=validate
+
+# Mostrar SQL en consola (útil para desarrollo)
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
+
+# ====================
+# CONFIGURACIÓN DE LOGGING
+# ====================
+logging.level.org.springframework.security=DEBUG
+logging.level.com.vetcare.vetapp=DEBUG
+
+# ====================
+# CONFIGURACIÓN DE ACTUATOR (OPCIONAL)
+# ====================
+# Endpoints de monitoreo
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when-authorized
