--- a/frontend-mobile/gradle/wrapper/gradle-wrapper.properties
+++ b/frontend-mobile/gradle/wrapper/gradle-wrapper.properties
@@ -1,7 +1,9 @@
-distributionBase=GRADLE_USER_HOME
+.#Thu Nov 20 19:05:43 CET 2025
+d.istributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.14.3-bin.zip
+distributionUrl=https://services.gradle.org/distributions/gradle-8.14.3-bin.zip
 networkTimeout=10000
+
 validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
