fix: correcciones de properties

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,53 +1,52 @@
 # ====================
-# CONFIGURACI脫N DE LA APLICACI脫N
+# CONFIGURACIONES DE LA APLICACIONES
 # ====================
 spring.application.name=vetapp
 server.port=8081
 
 # ====================
-# CONFIGURACI脫N DE SEGURIDAD (OAUTH2 RESOURCE SERVER)
+# CONFIGURACIONES DE SEGURIDAD (OAUTH2 RESOURCE SERVER)
 # ====================
-# El backend valida tokens JWT de Keycloak (doble validaci贸n con API Gateway)
+# El backend valida tokens JWT de Keycloak (doble validacion con API Gateway)
 # Esto permite usar @PreAuthorize y extraer roles/claims del token
 
 # URL del issuer de Keycloak para validar tokens
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:8080/realms/vetcare}
 
 # ====================
-# CONFIGURACI脫N DE BASE DE DATOS (POSTGRESQL)
+# CONFIGURACIONES DE BASE DE DATOS (POSTGRESQL)
 # ====================
-# URL de conexi贸n - usa variable de entorno en producci贸n
+# URL de conexion - usar variable de entorno en produccion
 spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/vetcare_dev}
 spring.datasource.username=${DB_USERNAME:vetcare_user}
 spring.datasource.password=${DB_PASSWORD:vetcare_pass}
-
 # Driver de PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ====================
-# CONFIGURACI脫N DE JPA/HIBERNATE
+# CONFIGURACIONES DE JPA/HIBERNATE
 # ====================
 # Dialecto de PostgreSQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Estrategia de generaci贸n de esquema
-# validate: Solo valida que el esquema coincida (PRODUCCI脫N)
-# update: Actualiza el esquema autom谩ticamente (DESARROLLO - cuidado)
+# Estrategia de generaci髇 de esquema
+# validate: Solo valida que el esquema coincida (PRODUCCI覰)
+# update: Actualiza el esquema autom醫icamente (DESARROLLO - cuidado)
 spring.jpa.hibernate.ddl-auto=validate
 
-# Mostrar SQL en consola (煤til para desarrollo)
+# Mostrar SQL en consola (util para desarrollo)
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
 # ====================
-# CONFIGURACI脫N DE LOGGING
+# CONFIGURACIONES DE LOGGING
 # ====================
 logging.level.org.springframework.security=DEBUG
 logging.level.com.vetcare.vetapp=DEBUG
 
 # ====================
-# CONFIGURACI脫N DE ACTUATOR (OPCIONAL)
+# CONFIGURACIONES DE ACTUATOR (OPCIONAL)
 # ====================
 # Endpoints de monitoreo
-management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=when-authorized
+#management.endpoints.web.exposure.include=health,info
+#management.endpoint.health.show-details=when-authorized
