--- a/frontend-mobile/package.json
+++ b/frontend-mobile/package.json
@@ -22,6 +22,8 @@
     "@capacitor/ios": "7.4.3",
     "@capacitor/keyboard": "7.0.3",
     "@capacitor/status-bar": "7.0.3",
+    "@fontsource/poppins": "^5.2.7",
+    "@fontsource/roboto": "^5.2.9",
     "@ionic/react": "^8.7.4",
     "@ionic/react-router": "^8.7.4",
     "@types/react-router": "^5.1.20",
